--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
   </div>
 
   <div class="project-card">
-    <h3>Weather Forecast App</h3>
-    <p>Search any city and get live weather data with temperature, wind, and condition icons.</p>
-    <a href="#" target="_blank">View Project</a>
+    <h3>ShopSphere</h3>
+    <p>Browse products, add to cart, and manage your shopping experience with a clean, responsive e-commerce interface.</p>
+    <a href="https://omiye-precious.github.io/shopsphere/" target="_blank">View Project</a>
   </div>
 
   <div class="project-card">
@@ -160,3 +160,4 @@
 
 </body>
 </html>
+
